// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsItem should render empty 1`] = `null`;

exports[`PostsItem should render with node 1`] = `
<div
  className="sc-bdVaJa bKXTIM"
>
  <h2>
    <div
      data-mock="Link"
    >
      Some title
    </div>
  </h2>
  <div
    className="sc-bwzfXH bJNuVE"
  >
    10 May, 2018
  </div>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Excerpt text",
      }
    }
  />
</div>
`;

exports[`PostsItem should render with slug when title not provided 1`] = `
<div
  className="sc-bdVaJa bKXTIM"
>
  <h2>
    <div
      data-mock="Link"
    >
      /first
    </div>
  </h2>
  <div
    className="sc-bwzfXH bJNuVE"
  >
    10 May, 2018
  </div>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Excerpt text",
      }
    }
  />
</div>
`;
